# backend-tel-conecctor

./: .env  Cargo.toml
src/: bot.rs  error.rs  errortype.rs  main.rs  middleware.rs  project_model.rs  ser.rs
src/actions/: connector.rs  event.rs  log.rs  mod.rs
src/client/: jira.rs  mod.rs  mongodb.rs  rusoto.rs
src/models/: comment.rs  connector.rs  event.rs  issue.rs  jira.rs  log.rs  mod.rs  user.rs
src/routes/: connector.rs  event.rs  jira.rs  log.rs  mod.rs  user.rs
src/util/: client.rs  mod.rs
