[package]
name = "actixproject1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
teloxide = { version = "0.11", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
mongodb = "2.3.1"
futures = "0.3.26"
env_logger = "0.10.0"
actix-rt = "2.8.0"
slack-hook2 = "0.10.1"
actix-cors = "0.6.4"
chrono = "0.4.23"
